test/UT/testassets/tls/ingress.json
{
  "Routes": {
    "minimal-ingress.default:subdomain1.example.com/foo*": {
      "Order": 0,
      "Key": "minimal-ingress.default:subdomain1.example.com/foo*",
      "ClusterId": "frontend.default:443",
      "Match": {
        "Hosts": [
          "subdomain1.example.com"
        ],
        "Paths": [
          "/foo*"
        ]
      }
    }
  },
  "Clusters": {
    "frontend.default:443": {
      "Key": "frontend.default:443",
      "Destinations": [
        {
          "Address": "https://10.244.2.38:443"
        },
        {
          "Address": "https://10.244.12.38:443"
        }
      ]
    }
  },
  "Sni": {
    "minimal-ingress.default:testsecret-tls": {
      "Key": "minimal-ingress.default:testsecret-tls",
      "Order": 0,
      "Host": [
        "https-example.foo.com"
      ],
      "Certificate": {
        "IsPEM": true,
        "PEM": "-----BEGIN CERTIFICATE-----\nMIIFCzCCAvOgAwIBAgIUAi7DqcEn4EsBm1lN4UcmmuxWPq0wDQYJKoZIhvcNAQEL\nBQAwFDESMBAGA1UEAwwJbG9jYWxob3N0MCAXDTIxMDIyNjE4MzI0OVoYDzIxMjEw\nMjAyMTgzMjQ5WjAUMRIwEAYDVQQDDAlsb2NhbGhvc3QwggIiMA0GCSqGSIb3DQEB\nAQUAA4ICDwAwggIKAoICAQDI5+DbDLpVmRFFB9YR1NwAbdPzf7cV8RB32pNVHzLj\niJ9LNSq8yvI/k6xD3p8XHVJEC3TGMuOVK4Cn277nX9KSU/7lELMlz+yGikwli3aI\nu4A7NE84ACfR6ZFelAGcGr2nMze6K2YDwhhqG8SUBIhAjzjIXSf2+cv0Cq38cEX1\nWKy1h5xJm7FwuKlZsHmJw5Osk+8mFgHJ5TmKqJYtVd7b/ytAmeM2ByZ4eVC [...]
        "PEMKey": "-----BEGIN ENCRYPTED PRIVATE KEY-----\nMIIJnDBOBgkqhkiG9w0BBQ0wQTApBgkqhkiG9w0BBQwwHAQItOk3T6xc6NECAggA\nMAwGCCqGSIb3DQIJBQAwFAYIKoZIhvcNAwcECAKua/2H7aHDBIIJSNpyiEmgYamY\n1U5fkmHQbCHuT16i4tN19OM9Atxyjp+zX2DmRDYf3LJEeJxDYHyATAQNmemO6FlG\nnMOUnsqVn9IMOxMQeHuesL5WhMcW/3VEWuVR4Ivr0C+MqRkia4hwufISKpKUo/oe\n/ipWE/CbbE+eG83oHNANpIuo+c+Om2+maoxNNoZnPEzQJi4Xpywsk8DLB2qBI5tW\nvuQZ+BSnomtlCNSJuFGpWzOmGsoDmYPDO6Xq9AjkPmHJO2dkeWoviuNqGsUsr/wS\nvgvZYpw4n/QnkV/PeRsh5JHpUfJVfT636uav7Xy2w00WsK [...]
        "IsFileCert": false,
        "Password": "testPassword",
        "IsStoreCert": false
      },
      "Passthrough": false,
      "HandshakeTimeout": "00:00:10"
    }
  }
}
